--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -9,6 +9,11 @@
   "AppSettings": {
     "ConnectionStrings": "Data Source=.;Database=DemoShirtDb;User ID=SA;Password=Str#ng_Passw#rd;MultipleActiveResultSets=true",
     "Secret": "THIS IS THE MOST SECRET KEY OF TODO APP",
-    "CORS": "http://localhost:3000"
+    "CORS": "http://localhost:3000",
+    "Mail": "finalproject7979@gmail.com",
+    "DisplayName": "Final Project",
+    "Password": "abmgyncswouicrkm",
+    "Host": "smtp.gmail.com",
+    "Port": 587
   }
 }
